--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,27 @@
 #editor{
- width: 1000px;
- height: 500px;
  background-color: #011627;
  color: #DCDC9D;
  font-size: 1em;
  font-family: "Courier New";
+ float: left;
+ width: 50%;
+ height: 100vh;
+ resize: none;
 }
 
 #memory-container{
 	font-family: monospace;
+
 }
 
 .current-memory{
 	color: red;
+}
+
+body, html{
+	padding: 0;
+	margin: 0;
+}
+* {
+    box-sizing: border-box;
 }
