--- a/css/index.css
+++ b/css/index.css
@@ -37,8 +37,13 @@
 	padding: 15px;
 	text-align: center;
 }
+
 #owenWilsonFace {
 	height: 100%;
+}
+
+#registerValue {
+	display: inline-block;
 }
 
 .current-memory{
